@@ -34,9 +34,7 @@ public class DomainSerializer extends Serializer {
 			throws JSONException {
 		final JSONObject jsonDomain = new JSONObject();
 		jsonDomain.put("idDomain", domain.getId());
-		final String localName = domain.getIdentifier().getLocalName();
-		jsonDomain.put("name", localName);
-		jsonDomain.put("origName", localName);
+		jsonDomain.put("name", domain.getIdentifier().getLocalName());
 
 		jsonDomain.put(DESCRIPTION, domain.getDescription());
 		jsonDomain.put(DIRECT_DESCRIPTION, domain.getDescription1());
@@ -58,7 +56,6 @@ public class DomainSerializer extends Serializer {
 
 		jsonDomain.put("md", domain.isMasterDetail());
 		jsonDomain.put("md_label", domain.getMasterDetailDescription());
-		jsonDomain.put("classType", getClassType(domain.getIdentifier().getLocalName()));
 		jsonDomain.put("active", domain.isActive());
 		jsonDomain.put("cardinality", domain.getCardinality());
 
@@ -67,7 +64,7 @@ public class DomainSerializer extends Serializer {
 		final AttributeSerializer attributeSerializer = AttributeSerializer.newInstance() //
 				.withDataView(dataView) //
 				.build();
-		
+
 		jsonDomain.put("attributes", attributeSerializer.toClient(domain.getAttributes(), activeOnly));
 		jsonDomain.put("system", domain.isSystemButUsable());
 
@@ -84,16 +81,6 @@ public class DomainSerializer extends Serializer {
 		}
 	}
 
-	private String getClassType(final String className) {
-		// TODO do it better
-		final CMClass target = dataView.findClass(className);
-		if (dataView.getActivityClass().isAncestorOf(target)) {
-			return "processclass";
-		} else {
-			return "class";
-		}
-	}
-
 	private void addAccessPrivileges(final JSONObject jsonObject, final CMDomain domain) throws JSONException {
 		final boolean writePrivilege = privilegeContext.hasWriteAccess(domain);
 		final boolean createPrivilege = writePrivilege;
@@ -105,6 +92,10 @@ public class DomainSerializer extends Serializer {
 		final JSONObject jsonDomain = toClient(domain, false);
 		jsonDomain.put("inherited", !isDomainDefinedForClass(domain, className));
 		return jsonDomain;
+	}
+
+	public JSONObject toClient(final CMDomain domain) throws JSONException {
+		return toClient(domain, false);
 	}
 
 	/**
